--- a/vercel.json
+++ b/vercel.json
@@ -22,5 +22,18 @@
         }
       ]
     }
-  ]
+  ],
+  "github": {
+    "enabled": true,
+    "comments": true,          // 启用 PR 评论
+    "autoJobCancelation": true,
+    "previewProduction": false,
+    "branchFilter": [
+      "main",
+      "dev",
+      "feature/*"
+    ]
+  },
+  "buildCommand": "pnpm run build",
+  "outputDirectory": "dist"
 }
